--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 kit.git-config.edn
 .DS_Store
 .nrepl-port
-hs_err_pid*.log
+hs_err_pid*.:$
 .cpcache/
 target
 log/
 .shadow-cljs/
 node_modules/
 modules/
+.rebel_readline_history
 
 # IntelliJ
 *.iml
